syntax = "proto3";

package log.v1;

option go_package = "github.com/justagabriel/proglog/api/log_v1";

message Record {
    bytes value = 1;
    uint64 offset = 2;
    uint64 term = 3;
    uint32 type = 4;
}

message CreateRecordRequest {
	Record record = 1;
}

message CreateRecordResponse {
    uint64 offset = 1;
}

message GetRecordRequest {
    uint64 offset = 1;
}

message GetRecordResponse {
	Record record = 1;
}

message GetServersRequest {

}

message Server {
    string id = 1;
    string rpc_addr = 2;
    bool is_leader = 3;
}

message GetServersResponse {
    repeated Server servers = 1;
}


service Log {
    rpc Create(CreateRecordRequest) returns (CreateRecordResponse) {}
    rpc CreateStream(stream CreateRecordRequest) returns (stream CreateRecordResponse){}
    rpc Get(GetRecordRequest) returns (GetRecordResponse){}
    rpc GetStream(stream GetRecordRequest) returns (stream GetRecordResponse){}
    rpc GetServers(GetServersRequest) returns (GetServersResponse){}
}